# AutoWick

./: CITATION.cff  README.md  meson.build  pyproject.toml
example/: distillation.py  elemental.npy  mins.npy  npi0_2pt.py  npi_2pt.py  npipi_2pt.py  peramb_t0.npy  peramb_t1.npy  peramb_t2.npy  peramb_t3.npy
src/autowick/: __init__.py  contractions.py  corr.py  mat.py  objects.py
